package com.example.Backend.Constants;

public enum ProcessStatus {
    NEW, PENDING, IN_PROGRESS, COMPLETED
}
